# japanese-crossword

./: .pre-commit-config.yaml  README.md  helpers.py  main.py  pyproject.toml
crosswords/: 1.json
src/japanese_crossword/: helpers.py  main.py
tests/: test_helpers.py
