[project]
name = "japanese_crossword"
version = "0.1.0"
description = "Japanese crossword solver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12",
    "pyright>=1.1.402",
    "pre-commit>=4.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/japanese_crossword"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pyright]
pythonVersion = "3.13"
include = ["src"]
exclude = ["**/__pycache__", "build", "dist"]
venvPath = "."
venv = ".venv"
#typeCheckingMode = "strict"

[tool.ruff]
target-version = "py313"
line-length = 88
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
lint.ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "E722",   # use bare except
    "E701",   # multiple statements on one line (colon)
    "C408",   # unnecessary `tuple()` call (rewrite as a literal)
]

[tool.ruff.lint.isort]
# Дополнительные настройки сортировки
known-first-party = ["japanese_crossword"]
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

